--- a/Pump_Control/Controls/pumpControl.xaml
+++ b/Pump_Control/Controls/pumpControl.xaml
@@ -5,33 +5,33 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Pump_Control.Controls"
              mc:Ignorable="d">
-    <Grid>
+    <Grid HorizontalAlignment="Center">
         <StackPanel Orientation="Vertical" Background="Beige">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <TextBlock Text="Pump Name:  "></TextBlock>
-            <TextBox Text="Pump  " Width="100"></TextBox>
+                <TextBlock Text="Pump Name:  "></TextBlock>
+                <TextBox Text="Pump  " Name="txt_name" Width="100"></TextBox>
             </StackPanel>
-            <Ellipse x:Name="status_red" Stretch="Fill" Fill="Red" Width="Auto"  Height="60" Margin="0,10,0,0"/>
+            <Ellipse Name="status_red" Stretch="Fill" Fill="Red" Width="Auto"  Height="60" Margin="0,10,0,10"/>
             <StackPanel Background="Gray" Orientation="Horizontal">
                 <TextBlock x:Name="textBlock1">Flow Rate:</TextBlock>
                 <TextBlock x:Name="lbl_flow_rate" Foreground="Blue"/>
             </StackPanel>
             <StackPanel Background="AliceBlue">
-            <TextBlock Text="Cycle Properties"></TextBlock>
-            <StackPanel Orientation="Horizontal">
-            <TextBlock Text="Cycle On: " Margin="20,0,0,0"/>
-                <TextBlock Text="#" Name="lbl_Cycle_on"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-            <TextBlock Text="Cycle Off: " Margin="20,0,0,0"/>
-                <TextBlock Text="#" Name="lbl_Cycle_off"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Cycles Complete: "/>
-                <TextBlock x:Name="lbl_iterations"/>
-            </StackPanel>
+                <TextBlock Text="Cycle Properties"></TextBlock>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Cycle On: " Margin="20,0,0,0"/>
+                    <TextBlock Text="#" Name="lbl_Cycle_on"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Cycle Off: " Margin="20,0,0,0"/>
+                    <TextBlock Text="#" Name="lbl_Cycle_off"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Cycles Complete: "/>
+                    <TextBlock Name="lbl_iterations"/>
+                </StackPanel>
             </StackPanel>
         </StackPanel>
-            
+
     </Grid>
 </UserControl>
