Lots of good progress. Elapsed time added and working. min hrs for cycles working. iterations working correctly. all GUI woring. testing directive defined ("testing").  Ready to begin testing with pumps.

--- a/Pump_Control/Controls/input_details.xaml
+++ b/Pump_Control/Controls/input_details.xaml
@@ -29,9 +29,9 @@
                         <TextBox Name="cycle_time_off" Width="50"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical">
-                        <TextBox Name="cycle_time_start_m" Width="50"/>
-                        <TextBox Name="cycle_time_on_m" Width="50"/>
-                        <TextBox Name="cycle_time_off_m" Width="50"/>
+                        <TextBox Name="cycle_time_start_h" Width="50"/>
+                        <TextBox Name="cycle_time_on_h" Width="50"/>
+                        <TextBox Name="cycle_time_off_h" Width="50"/>
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
